chore(format message):

--- a/index.html
+++ b/index.html
@@ -4,18 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="https://cdn.bootcdn.net/ajax/libs/babel-standalone/7.0.0-beta.3/babel.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/lodash.js/4.17.20/lodash.min.js"></script>
   </head>
 
   <body>
-    <script type="text/babel">
-      function appendLine(data, type = 'p') {
-        const typeEl = document.createElement(type)
-        const txtEl = document.createTextNode(data)
+    <script>
+      function appendLine(data) {
+        const boxEl = document.createElement('div')
+        boxEl.style.display = 'flex'
+        boxEl.style.backgroundColor = 'antiquewhite'
+        boxEl.style.marginBottom = '10px'
 
+        const timeEl = document.createElement('div')
+        const timeTxt = document.createTextNode(
+          `${new Date().toLocaleString()}`
+        )
+        timeEl.appendChild(timeTxt)
+
+        // 代码
+        const typeEl = document.createElement('pre')
+        const txtEl = document.createTextNode(data)
+        typeEl.style.margin = 0
+        typeEl.style.flex = 1
         typeEl.appendChild(txtEl)
-        document.body.appendChild(typeEl)
+
+        boxEl.appendChild(typeEl)
+        boxEl.appendChild(timeEl)
+        document.body.appendChild(boxEl)
       }
 
       if (WebSocket) {
@@ -27,16 +41,9 @@
         }
 
         ws.onmessage = function (e) {
-          appendLine('[message] Data received from server')
-          console.log(e.data)
-          try {
-            const formatMessage = JSON.parse(e.data)
-            console.log(formatMessage)
-            appendLine(formatMessage.data, formatMessage.type)
-          } catch (e) {
-            console.log(e.message)
-            appendLine(e.data)
-          }
+          // appendLine('[message] Data received from server')
+          console.log('[message] Data received from server')
+          appendLine(e.data)
         }
 
         ws.onclose = function (e) {
@@ -49,27 +56,18 @@
       }
 
       function log(msg) {
-        let currentMsg = {
-          data: 'demo',
-          type: 'p', // p | pre | code
-        }
-
-        if (_.isString(msg)) {
-          currentMsg = _.assign({}, currentMsg, {
-            data: msg,
-          })
-        }
-
-        if (_.isObject(msg)) {
-          currentMsg = _.assign({}, currentMsg, msg)
-        }
-
-        if (window.ws) {
-          ws.send(JSON.stringify(currentMsg))
-        } else {
-          console.log(currentMsg)
-        }
+        ws.send(JSON.stringify(msg, null, 2))
       }
+
+      timer = setInterval(() => {
+        log('a')
+        log({ a: 1 })
+        log({ data: 1, type: 'code' })
+      }, 2400)
+
+      setTimeout(() => {
+        clearInterval(timer)
+      }, 6000)
     </script>
   </body>
 </html>
